# jurigged

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  python-package.yml
jurigged/: __init__.py  codedb.py  codefile.py  codetools.py  config.py  dev.py  live.py  loop.py  parse.py  recode.py  register.py  registry.py  runpy.py  utils.py  version.py
jurigged/loop/: __init__.py  basic.py  develoop.py  richloop.py
src/jurigged/: __init__.py  __main__.py  codetools.py  live.py  parse.py  register.py  rescript.py  runpy.py  utils.py
src/jurigged/loop/: __init__.py  basic.py
tests/: common.py  test_codefile.py  test_codetools.py  test_generated.py  test_live.py  test_recoder.py  test_register.py  test_registry.py  test_rescript.py
tests/snippets/: apple.py  asserts:new.py  ballon:main.py  ballon:recoded.py  ballon:v2.py  chips:bad.py  chips:delete.py  chips:main.py  chips:mod.py  chips:newdeco.py  chips:newdeco2.py  chips:newfn.py  dandelion:main.py  dandelion:outcome.py  dandelion:outcome2.py  dandelion:repl.py  dandelion:v2.py  dandelion:v2result.py  elephant:less.py  elephant:main.py  elephant:mod.py  elephant:more.py  firmament:main.py  firmament:mod.py  firmament:result.py  future_flags:name_collision.py  future_flags:new.py  glamour:main.py  glamour:mod.py  glamour:mod2.py  glamour:mod3.py  hyperspace:main.py  hyperspace:recoded.py  iguana:bad.py  iguana:main.py  jackfruit:main.py  jackfruit:mod.py  kilroy:bad.py  ya.py  yb.py  (+2 more)
