[tool.poetry]
name = "jurigged"
version = "0.5.2"
description = "Live update of Python functions"
authors = ["Olivier Breuleux <breuleux@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/breuleux/jurigged"
repository = "https://github.com/breuleux/jurigged"

[tool.poetry.dependencies]
python = "^3.8"
blessed = "^1.17.12"
codefind = "^0.1.3"
ovld = "^0.3.1"
watchdog = ">=1.0.2"
giving = {version = "^0.3.6", optional = true}
rich = {version = "^10.13.0", optional = true}
hrepr = {version = "^0.4.0", optional = true}

[tool.poetry.dev-dependencies]
black = ">=21.10b0"
isort = "^5.6.4"
pytest = "^6.2.1"
pytest-cov = {extras = ["toml"], version = "^3.0.0"}
flake8 = "^3.8.4"

[tool.poetry.extras]
develoop = ["giving", "hrepr", "rich"]

[tool.poetry.scripts]
jurigged = "jurigged.live:cli"

[tool.black]
line-length = 80
exclude = "tests/snippets"

[tool.isort]
known_first_party = "jurigged"
known_third_party = ""
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true
skip = "tests/snippets/"

[tool.coverage.run]
omit = [
    "jurigged/__main__.py",
    "jurigged/runpy.py",
    "jurigged/loop/*",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "@abstractmethod",
    "# pragma: no cover"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
