[tool.poetry]
name = "jurigged"
version = "0.5.8"
description = "Live update of Python functions"
authors = ["Olivier Breuleux <breuleux@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/breuleux/jurigged"
repository = "https://github.com/breuleux/jurigged"

[tool.poetry.dependencies]
python = "^3.8"
blessed = "^1.17.12"
codefind = "^0.1.3"
ovld = "^0.3.1"
watchdog = ">=1.0.2"
giving = {version = "^0.4.1", optional = true}
rich = {version = ">=10.13.0", optional = true}

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"
pytest = ">=6.2.1"
pytest-cov = {extras = ["toml"], version = ">=3.0.0"}

[tool.poetry.extras]
develoop = ["giving", "rich"]

[tool.poetry.scripts]
jurigged = "jurigged.live:cli"

[tool.ruff]
line-length = 80
exclude = ["tests/snippets"]

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E241", "F722", "E501", "E203", "F811", "F821"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.coverage.run]
omit = [
    "jurigged/__main__.py",
    "jurigged/runpy.py",
    "jurigged/loop/*",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "@abstractmethod",
    "# pragma: no cover"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
